--- a/admin/index.html
+++ b/admin/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="https://unpkg.com/netlify-cms/dist/cms.css" />
   </head>
   <body>
-    <script src="https://unpkg.com/netlify-cms/dist/cms.js"></script>
+    <script src="cms.js"></script>
   </body>
 </html>
